--- a/app/src/main/res/layout/res_item_profile.xml
+++ b/app/src/main/res/layout/res_item_profile.xml
@@ -53,11 +53,11 @@
                     android:textSize="19sp" />
 
                 <TextView
-                    android:id="@+id/language"
+                    android:id="@+id/musica"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Linguagem de Programação"
+                    android:text="Musica"
                     android:textSize="15sp" />
 
             </LinearLayout>
