--- a/app/src/main/res/layout/res_item_profile.xml
+++ b/app/src/main/res/layout/res_item_profile.xml
@@ -53,7 +53,7 @@
                     android:textSize="19sp" />
 
                 <TextView
-                    android:id="@+id/musica"
+                    android:id="@+id/song"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
